--- a/OTTT/src/main/webapp/resources/css/mypage/message.css
+++ b/OTTT/src/main/webapp/resources/css/mypage/message.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
-
 *{margin: 0;padding: 0;font-family: 'Noto Sans KR', sans-serif;}
 
 a{text-decoration: none;color: inherit;display: block;}
@@ -105,8 +104,6 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 .mnb2 > ul > li:hover{
     color: #33ff33;
 }
-
-
 
 .h-icon{
     width: 120px;
@@ -227,249 +224,117 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
     position: relative;
 }
 
-.send-img {
-    width: 30px;
-    height: 30px;
-    position: relative;
+button {
+    display: flex;
+    border: none;
+    outline: none;
+    color: white;
+    font-size: 14px;
+    border: 2px solid #33FF33;
+    border-radius: 10px;
+    background-color: transparent;
+    margin-right: 5px;
+    padding: 5px 12px;
 }
 
-
-.sec01{
+.sec00 {
+    /* border: 1px solid red; */
     width: 1200px;
     height: auto;
     margin: 0 auto;
     display: flex;
-    /* border: 1px solid red; */
     box-sizing: border-box;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 1px;
 }
 
-.sec02{
-    width: 800px;
-    height: auto;
+.sec01{
+    width: 1200px;
+    height: 600px;
     margin: 0 auto;
     display: flex;
-    /* border: 1px solid red; */
     box-sizing: border-box;
-    margin-top: 10px;
-    margin-bottom: 20px;
+}
+.sec-left {
+/*     border: 1px solid pink; */
+    overflow: auto;
+}
+
+.sec-right {
+    border: 2px solid #33FF33;
+    width: 37%;
     border-radius: 10px;
-    background-color: #0c0808;
-}
-
-.sec03{
-    width: 800px;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    /* border: 1px solid red; */
-    box-sizing: border-box;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    background-color: #3f3e3e;
-}
-
-.push{
-    width: 800px;
-    height: auto;
-    margin: auto;
-}
-
-
-
-/* --------------- */
-.push-alarm{
-    width: 575px;
-    height: 100%;
-    /* border: 1px solid red; */
-    margin-top: 12px;
-}
-
-.push-alarm p{
-    display: flex;
-    justify-content: flex-end;
-    font-weight: bold;
-}
-
-.btn{
-    color: #fff;
-    background-color: transparent;
-    border-style: none;
-    border-color: #fff; 
-    font-size: 23px; 
-    text-decoration: none;
-}
-
-.btn:hover{
-    background-color: transparent;
-    color: #33FF33; 
-}
-
-.modal-content{
-    background-color: #202020;
-}
-
-.modal-body{
-    font-size: 17px;
-    text-align: left;
-    border: 1px solid #33ff33;
-}
-
-.modal-header{
-    border: 1px solid #33ff33;
-}
-
-.modal-footer{
-    border: 1px solid #33ff33;
-}
- 
-.modi-del{
-    text-align: left;
-}
-
-.send-msg{
-    width: 50px;
-    height: 100%;
-    /* border: 1px solid red; */
-}
-
-.btn-primary1{
-    margin-top: 10px;
-
-}
-
-.form-control {
-    height: 500px;
-    background-color: #0c0808;
-    color: #fff;
-    border: #0c0808;
-}
-
-textarea:focus {
-    outline: 0px;
-}
-
-textarea {
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    border: #0c0808;
-    border-radius: 5px;
-    font-size: 16px;
-    resize: none;
-}
-
-
-/* -------------- */
-
-.alarm-1-1 {
-    color: white;
-    border-radius: 10px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 20px;
-    /* border: 1px solid red; */
-}
-
-.btn-send {
-    width: 50px;
-    height: 50px;
-    background-color: transparent;
-    text-align: center;
-    padding-left: 0px;
-    margin-top: 13px;
-    margin-left: 7px;
-}
-
-.btn-delete {
-    width: 50px;
-    height: 50px;
-    display: flex;
-    margin: 25px 0px 0px 25px;
-    text-align: center;
-    padding-left: 0px;
-    background-color: transparent;
-    border: none;
-}
-
-.profile{
-    border-radius: 10px;
-    margin-right: 15px;
+    background-color: #3b3a3a;
     margin-left: 10px;
+    padding: 20px;
 }
 
-.notice{
-    /* border-top: 20px; */
-    display: inline-block;
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border-bottom: 2px solid #33ff33;
+/*     overflow: auto; */
+}
+
+th, td {
+    width: 310px;
+    text-align: center;
+    padding: 12px 10px;
+}
+
+.msg-img {width: 90px;}
+
+.msg-del {width:50px;}
+
+.msg-nick {
+	width: 100%;
+	text-align: center;
+	margin-bottom: 15px;
+	font-weight: 600;
+}
+
+.msg-view-content {
+	width: 100%;
+	height: 85%;
+	background-color: #202020;
+	border-radius: 10px;
+	padding: 20px 10px 20px 10px;
+	font-weight: 200;
+	overflow: auto;
+}
+
+.msg-write-btn {
+	margin-top: 15px;
+    left: 43%;
     position: relative;
-    bottom: 45px;
-    left: 100px;
-    font-size: 20px;
-    width: 600px;
-    height: auto; 
+    background-color: #33FF33;
+    color: black;
+    font-weight: 600;
 }
 
-.btn_delete_div{
-    display: inline-block;
-    position: relative;
-    bottom: 30px;
-    left: 160px;
+.msg-view-content::-webkit-scrollbar {
+    width: 5px;
 }
 
-.btn_send_div{
-    display: inline-block;
-    position: relative;
-    bottom: 28px;
-    left: 85px;
-}
-
-.btn_send{
-    display: flex;
-    background-color: transparent;
-    border: none;
-}
-
-ul{
-    padding: 0;
-    list-style: none;
-
-}
-
-.form-check{
-    font-size: 25px;
-}
-
-.btn_check_div{
-    display: inline-block;
-    position: relative;
-    top: 63px;
-    left: 780px;
-}
-
-.btn_check{
-    width: 0 auto;
-    height: 25px;
-    display: flex;
-}
-
-.alarm-1-1 > img {
-    width: 76px;
-    height: 67px;
-    background-color: #fff;
-}
-
-#content01Label > img {
-    width: 76px;
-    height: 67px;
-    background-color: #fff;
+.msg-view-content::-webkit-scrollbar-thumb {
+    height: 30%;
+    background: #8f8f8f;
     border-radius: 10px;
 }
 
-#msg00Label > img {
-    width: 76px;
-    height: 67px;
-    background-color: #fff;
+.msg-view-content::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.sec-left::-webkit-scrollbar {
+    width: 5px;
+}
+
+.sec-left::-webkit-scrollbar-thumb {
+    height: 30%;
+    background: #8f8f8f;
     border-radius: 10px;
+}
+
+.sec-left::-webkit-scrollbar-track {
+    background: transparent;
 }
