--- a/OTTT/src/main/webapp/resources/css/mypage/messagewindow.css
+++ b/OTTT/src/main/webapp/resources/css/mypage/messagewindow.css
@@ -31,7 +31,7 @@ body{background-color: #202020;color: #fff;}
 
 .sec02 {
     width: 460px;
-    height: 500px;
+    height: 520px;
     border-left: 2px solid #33ff33;
     border-right: 2px solid #33ff33;
 }
@@ -44,10 +44,9 @@ body{background-color: #202020;color: #fff;}
     border-bottom-right-radius: 10px;
 }
 
-.proimg {
+img {
     width: 70px;
     height: 70px;
-    border: 1px solid #33ff33;
     border-radius: 10px;
     position: relative;
     top: 3px;
@@ -61,9 +60,12 @@ textarea {
     border: none;
     resize: none;
     border-radius: 10px;
-    padding: 5px 10px 5px 10px;
+    padding: 10px 15px 10px 15px;
     background-color:#0c0808;
     color:white;
+    outline: none;
+    font-weight: 300;
+    margin-top: 15px;
   }
 
 .write {
@@ -96,7 +98,7 @@ textarea {
     transform: translate(0, -50%);
 }
 
-#input1 {
+input {
     background-color: #33ff33;
     border: 3px;
     width: 60px;
@@ -106,4 +108,28 @@ textarea {
     top: 50%;
     left: 43%;
     transform: translate(0, -50%);
+    font-weight: 600;
 }
+
+textarea::-webkit-scrollbar {
+    width: 5px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    height: 30%;
+    background: #8f8f8f;
+    border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.count{
+	width: 400px;
+	height: auto;
+	font-size: 14px;
+	text-align: right;
+	color: #7d7d7d;
+}
+
