--- a/OTTT/src/main/webapp/resources/css/mypage/mydiary.css
+++ b/OTTT/src/main/webapp/resources/css/mypage/mydiary.css
@@ -250,8 +250,10 @@ header{
 .post {
     width: auto;
     height: 230px;
-    margin: 12px 0;
+    margin: 10px 0;
     background-color: #3F3B3B;
+    display: flex;
+    flex-direction: row;    
 }
 
 .review {
@@ -313,4 +315,24 @@ header{
 
 .mreview{
     color: #33ff33;
+}
+
+.title-line{
+    width: 100%;
+    height: 50px;
+    font-size: 20px;
+    padding: 10px 0;
+    border-bottom: 1.5px solid #fff;
+    margin: 0 auto;
+}
+.page-link {
+    color: #ffffff; 
+    background-color: #202020;
+    border-color: #ffffff;
+  }
+    
+.page-link:focus, .page-link:hover {
+    color: #33ff33;
+    background-color: #202020; 
+    border-color: #33ff33;
 }
