--- a/OTTT/src/main/webapp/resources/css/mypage/diary.css
+++ b/OTTT/src/main/webapp/resources/css/mypage/diary.css
@@ -294,15 +294,18 @@ textarea {
 
   }
 
-.rBot {
+.rBot, .lBot {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-self: flex-end; /* 버튼 아래 정렬 */
     position: absolute;
     bottom: 4%;
-    margin-right: 30px;
-    
+    margin-right: 30px;    
+}
+
+.lBot {
+	left: 3%
 }
 
 .btn-write {
