--- a/OTTT/src/main/webapp/resources/css/fix/Lmenu.css
+++ b/OTTT/src/main/webapp/resources/css/fix/Lmenu.css
@@ -9,14 +9,14 @@
 
 .Lmenu {
     width: 230px;
-    height: 400px;
+    height: 340px;
     margin-top: 47px;
     background-color: #0B0C0B;
     position: absolute ;
     border-radius: 10px;
 }
 .Lmenu > ul {
-    margin-top: 60px;
+    padding: 30px 0;
     padding-left: 0!important;
 }
 
@@ -24,6 +24,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 30px 0 0px 10px;
+    margin: 30px 0 0px 20px;
     font-size: 20px;
+}
+
+.Lmenu > ul > li > a {
+	cursor: pointer;
 }
