--- a/OTTT/src/main/webapp/resources/css/genre/main.css
+++ b/OTTT/src/main/webapp/resources/css/genre/main.css
@@ -4,7 +4,7 @@
 
 *{margin: 0;padding: 0;font-family: 'Noto Sans KR', sans-serif;}
  
-a{text-decoration: none;color: inherit;display: block;}
+a{text-decoration: none;color: inherit; display: block;}
 
 ul,li,ol{list-style: none;}
 
@@ -61,56 +61,14 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 
 }
 
-/* .h-icon  img{
-    width: 50px;
-} */
-
-
-
-.h-icon > ul > li:first-child > a{
-    background:url("../../images/icon/search02.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 32px;
-    width: 32px;
-    height: 32px;
-}
-
-.h-icon > ul > li:last-child > a{
-    background:url("../../images/icon/user01.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 32px;
-    width: 32px;
-    height: 32px;
-}
-
-.h-icon > ul > li:first-child > a:hover{
-    background: url("../../images/icon/searchh.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 32px;
-    width: 32px;
-    height: 32px;
-}
-
-.h-icon > ul > li:last-child > a:hover{
-    background:url("../../images/icon/user-h.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 32px;
-    width: 32px;
-    height: 32px;
-}
-
 .ott-logo-box {
   display: flex;
   justify-content: space-evenly;
 }
 
-.ott-logo-box > a {
-  width: 64px;
-  height: 64px;
+.ott-logo-box > input {
+  display: none;
+  
 }
 
 .ott-logo-divider {
@@ -137,17 +95,17 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
  
   
 }
-.submit{
+.subBtn{
   width:80px;
   height: 30px;
-  float: bottom;
-  margin: 40px 0 40px 200px; 
+  position : relative;
+  left : 85%;
   background-color: #202020;
   border-radius: 5px;
   color:#ffffff;
 
 }
-.submit:hover{
+.subBtn:hover{
   
   color:#33ff33;
 
@@ -201,31 +159,9 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 .ott-logo-img:hover{
   outline: 3px solid #33ff33;
   border-radius: 10px;
+  cursor: pointer;
 }
-.ott-logo-img1:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
-.ott-logo-img2:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
-.ott-logo-img3:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
-.ott-logo-img4:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
-.ott-logo-img5:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
-.ott-logo-img6:hover{
-  outline: 3px solid #33ff33;
-  border-radius: 10px;
-}
+
 .sec00 {
   height: 100px auto;
   width: 1100px;
@@ -243,25 +179,10 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
   border: 1px solid #fff;
   border-radius: 10px;
 }
-/* .dropdown-itemtemp{
-  color:#ffffff;
-}
-.dropdown-itemtemp:hover{
-  color:#33ff33;
-}
-/*최신순 드랍다운 박스*/
-
-/*.dropdown-menu{
-width: 100px;
-height: 0;
-border: 2px solid #202020;
-background-color: #202020;
-} */
 
 .sec00 > img {
   width: 100%;
 }
-
 
 .dropdown-filter {
   width: 88px;
@@ -295,9 +216,6 @@ background-color: #202020;
   flex-wrap: wrap;
 }
 
-.sec01 > a {
-  width: 180px;
-}
 
 /* .main-prod:hover {
   transform: scale(1.4);
@@ -401,12 +319,10 @@ background-color: #202020;
     margin: 30px;
 }
 
-
 .work-review{
     position: absolute;
     display: none;
     height: 220px;
-    width: 150px;
 }
 
 .work-cat{
