--- a/OTTT/src/main/webapp/resources/css/content/main.css
+++ b/OTTT/src/main/webapp/resources/css/content/main.css
@@ -163,7 +163,7 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 }
 
 .sec00 {
-  height: 100px auto;
+  height: auto;
   width: 1100px;
   margin: 30px auto;
   padding: 40px 72px;
