--- a/OTTT/src/main/webapp/resources/css/community/freecommunity/communityMain.css
+++ b/OTTT/src/main/webapp/resources/css/community/freecommunity/communityMain.css
@@ -88,7 +88,10 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 }
 .nav-link1:hover{color: #33FF33;}
 
-.nav a:nth-child(1){margin-left: 3.5vw;}
+.nav a:nth-child(1){
+	margin-left: 3.5vw;
+	color: #33ff33;
+}
 
 /* meun bar ENd */
 
@@ -255,8 +258,9 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
     justify-content: space-between;
 }
 
-.usur_img{
+.user_img{
     width: 40px;
+    border-radius: 5px;
    
 }
 
@@ -405,3 +409,4 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
     bottom: 50px;
     font-size: 50px;
 }
+
