--- a/OTTT/src/main/webapp/resources/css/community/freecommunity/communityPost.css
+++ b/OTTT/src/main/webapp/resources/css/community/freecommunity/communityPost.css
@@ -88,7 +88,10 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 }
 .nav-link1:hover{color: #33FF33;}
 
-.nav a:nth-child(1){margin-left: 3.5vw;}
+.nav a:nth-child(1){
+	margin-left: 3.5vw;
+	color: #33ff33;
+}
 
 /* meun bar ENd */
 
@@ -361,6 +364,15 @@ header{ width: 1200px; height: 130px;box-sizing: border-box;margin: 0 auto;posit
 	background-color: #0B0C0B;
     border: none;
     color: #fff;
+}
+
+.fileDelete{
+    background-color: #0B0C0B;
+    color: #fff;
+    border: solid 1px;
+    border-radius: 5px;
+    position: relative;
+    top:83px;
 }
 
 
