--- a/OTTT/src/main/webapp/resources/css/mypage/myreview.css
+++ b/OTTT/src/main/webapp/resources/css/mypage/myreview.css
@@ -222,11 +222,12 @@ header{
 .star {
 	width: 20px;
 	height: 20px;
+	margin-right: 3px;
 }
 
 .point {
 	position: relative;
-    top: 3px;
+    top: 4px;
 }
 
 .Lmenu ul li:nth-child(2) a {
