--- a/OTTT/src/main/webapp/resources/css/workDetailPage/review.css
+++ b/OTTT/src/main/webapp/resources/css/workDetailPage/review.css
@@ -19,8 +19,7 @@ button{
     height: 200px; 
     padding: 10px;
     display: flex;
-    border: 1px solid red;
-    box-sizing: border-box;
+
     overflow: hidden;
     flex-wrap: wrap;
     
@@ -250,7 +249,7 @@ header{
 
 .myReview{
 
-	    width: 1200px;
+	width: 1200px;
     height: auto;
     margin: 0 auto;
 
@@ -365,6 +364,15 @@ header{
     font-size: 30px;
     top:120px;
     border-top: 4px solid #33ff33;
+    width: 300px;
+    padding-top: 15px;
+}
+
+.star-text{
+	position: absolute;
+    font-size: 20px;
+    top:120px;
+   left: 10px;
     width: 300px;
     padding-top: 15px;
 }
@@ -1204,14 +1212,14 @@ form label{
 }
 
 .avgStar_wrap {
-	position: relative;
-	left: 0px;
-	top: 30px;
+	position: absolute;
+	left: 110px;
+	margin-top: 120px;
 	border: 1px solid gray;
 	border-radius: 5px;
 	background-color: gray;
 	height: 35px;
-	width: 245px;
+	width: 180px;
 }
 
 /* 모달 */
